crates/vexor-compiler/tests/golden/error/input/match_empty.vx
val r = 100
// empty match
val result = match r { }
export result
